Footer links open new tabs

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -21,25 +21,25 @@
         <ul class="social-media-list">
 
           {% if site.twitter_username %}
-          <a href="https://twitter.com/{{ site.twitter_username }}">
+          <a target="_blank" href="https://twitter.com/{{ site.twitter_username }}">
             <i class="fab fa-twitter fa-2x" style="color: #010101;"></i>
           </a>
           {% endif %}
 
           {% if site.subreddit %}
-          <a href="https://reddit.com/r/{{ site.subreddit }}">
+          <a target="_blank" href="https://reddit.com/r/{{ site.subreddit }}">
             <i class="fab fa-reddit fa-2x" style="color: #010101;"></i>
           </a>
           {% endif %}
 
           {% if site.facebook %}
-          <a href="https://facebook.com/{{ site.facebook }}">
+          <a target="_blank" href="https://facebook.com/{{ site.facebook }}">
             <i class="fab fa-facebook fa-2x" style="color: #010101;"></i>
           </a>
           {% endif %}
 
           {% if site.telegram %}
-          <a href="https://t.me/{{ site.telegram }}">
+          <a target="_blank" href="https://t.me/{{ site.telegram }}">
             <i class="fab fa-telegram fa-2x" style="color: #010101;"></i>
           </a>
           {% endif %}
