--- a/_includes/header.html
+++ b/_includes/header.html
@@ -2,7 +2,9 @@
 
   <div class="wrapper">
 
-    <a class="site-title" href="{{ site.baseurl }}/">{{ site.title }}</a>
+    <a class="site-title" href="{{ site.baseurl }}/">
+      <img class="nav-logo" src="{{ site.baseurl }}/images/fc-logo-navbar.png"/>
+    </a>
 
     <nav class="site-nav">
       <a href="#" class="menu-icon">
