--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -50,8 +50,16 @@
       <div class="footer-col footer-col-3">
         <h3 style="color: #010101"> Support </h3>
         <ul class="social-media-list">
-          <li> Privacy Policy </li>
-          <li> Terms </li>
+          <li>
+            <a href="https://beta.faircustodian.com/privacy">
+              Privacy Policy
+            </a>
+          </li>
+          <li>
+            <a href="https://beta.faircustodian.com/terms">
+              Terms and Conditions
+            </a>
+          </li>
         </ul>
       </div>
     </div>
