added the correct livery

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,69 +1,61 @@
-<footer class="site-footer">
-
-  <div class="wrapper">
-
-    <div class="footer-col-wrapper">
-      <div class="footer-col footer-col-1">
-        <h3 style="color: #010101"> Address </h3>
-        <address>
-            Fair Custodian Ltd</br>
-            Office 0.09</br>
-            PROTO: The New Emerging Technology Centre</br>
-            Abott's Hill</br>
-            Gateshead</br>
-            NE8 3DF</br>
-            Company Number: 11609558</br>
-        </address>
+<footer>
+  <div class="block block-inverse block-bordered">
+    <div class="container-fluid">
+      <div class="row">
+        <div class="col-md-3">
+          <address>
+            <ul class="list-unstyled list-spaced">
+              <li>
+                <h4 class="text-uppercase text-muted mb-5">
+                  Address
+                </h4>
+              </li>
+              <li>Fair Custodian Ltd</li>
+              <li>Office 0.09</li>
+              <li>PROTO: The New Emerging Technology Centre</li>
+              <li>Abott's Hill</li>
+              <li>Gateshead</li>
+              <li>NE8 3DF</li>
+              <li id="company-number">Company Number: 11609558</li>
+            </ul>
+          </address>
+        </div>
+        <div class="col-md-2">
+          <h4 class="text-uppercase text-muted mb-5">Social</h4>
+          <ul class="list-unstyled list-inline list-spaced">
+            <li class="list-inline-item">
+              <a href="https://twitter.com/FairCustodianUK"><i class="fab fa-twitter fa-2x text-white"></i>
+              </a>
+            </li>
+            <li class="list-inline-item">
+              <a href="https://reddit.com/r/faircustodian"><i class="fab fa-reddit fa-2x text-white"></i>
+              </a>
+            </li>
+            <li class="list-inline-item">
+              <a href="https://www.facebook.com/faircustodian"><i class="fab fa-facebook fa-2x text-white"></i>
+              </a>
+            </li>
+            <li class="list-inline-item">
+              <a href="https://t.me/faircustodian"><i class="fab fa-telegram fa-2x text-white"></i>
+              </a>
+            </li>
+          </ul>
+        </div>
+        <div class="col-md-2">
+          <h4 class="text-uppercase text-muted mb-5">Support</h4>
+          <ul class="list-unstyled list-spaced">
+            <li>
+              <a href="https://beta.faircustodian.com/terms">Terms and Conditions</a>
+            </li>
+            <li>
+              <a href="https://beta.faircustodian.com/privacy">Privacy Policy</a>
+            </li>
+          </ul>
+        </div>
       </div>
-
-      <div class="footer-col footer-col-2">
-        <h3 style="color: #010101"> Social </h3>
-        <ul class="social-media-list">
-
-          {% if site.twitter_username %}
-          <a target="_blank" href="https://twitter.com/{{ site.twitter_username }}">
-            <i class="fab fa-twitter fa-2x" style="color: #010101;"></i>
-          </a>
-          {% endif %}
-
-          {% if site.subreddit %}
-          <a target="_blank" href="https://reddit.com/r/{{ site.subreddit }}">
-            <i class="fab fa-reddit fa-2x" style="color: #010101;"></i>
-          </a>
-          {% endif %}
-
-          {% if site.facebook %}
-          <a target="_blank" href="https://facebook.com/{{ site.facebook }}">
-            <i class="fab fa-facebook fa-2x" style="color: #010101;"></i>
-          </a>
-          {% endif %}
-
-          {% if site.telegram %}
-          <a target="_blank" href="https://t.me/{{ site.telegram }}">
-            <i class="fab fa-telegram fa-2x" style="color: #010101;"></i>
-          </a>
-          {% endif %}
-
-        </ul>
+      <div class="text-center text-muted">
+        © Fair Custodian Ltd 2019
       </div>
-
-      <div class="footer-col footer-col-3">
-        <h3 style="color: #010101"> Support </h3>
-        <ul class="social-media-list">
-          <li>
-            <a href="https://beta.faircustodian.com/privacy">
-              Privacy Policy
-            </a>
-          </li>
-          <li>
-            <a href="https://beta.faircustodian.com/terms">
-              Terms and Conditions
-            </a>
-          </li>
-        </ul>
       </div>
     </div>
-
-  </div>
-
-</footer>
+  </footer>
