--- a/_sass/variables.scss
+++ b/_sass/variables.scss
@@ -26,7 +26,7 @@ $grid-gutter-width: 20px;
 
 // Typography
 $font-size-root: 14px;
-$font-family-sans-serif:  "Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif;
+$font-family-sans-serif:  "Questrial", "Helvetica Neue", Helvetica, Arial, sans-serif;
 $font-family-serif:       "Lora", Georgia, "Times New Roman", Times, serif;
 $font-family-base:        $font-family-sans-serif;
 $font-weight-base:        300;
