prepending site url to nav logo

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -2,7 +2,7 @@
   <div class="wrapper">
     <nav class="navbar navbar-expand-md navbar-light bg-light" id="fc-navbar">
       <a class="navbar-brand" href="/">
-        <img height="30" src="/images/fc-logo-navbar.png">
+        <img height="30" src="{{ "/images/fc-logo-navbar.png" | prepend: site.baseurl | prepend: site.url }}">
       </a>
       <button class="navbar-toggler" data-target="#navbar-content" data-toggle="collapse" type="button">
         <span class="navbar-toggler-icon"></span>
