ERDF and GX to footer

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -52,10 +52,18 @@
             </li>
           </ul>
         </div>
+        <div class='col-md-2'>
+          <div class='mr-3 mb-3'>
+            <img height="120" src="{{ "/images/ERDF_project_logo.png" | prepend: site.baseurl | prepend: site.url }}" />
+          </div>
+          <div class='mr-3 mb-3'>
+            <img height="120" src="{{ "/images/GX_project_logo.png" | prepend: site.baseurl | prepend: site.url }}" />
+          </div>
+        </div>
       </div>
       <div class="text-center text-muted">
         © Fair Custodian Ltd 2019
       </div>
-      </div>
     </div>
-  </footer>
+  </div>
+</footer>
