--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -3,11 +3,17 @@ layout: default
 ---
 <article class="post" itemscope itemtype="http://schema.org/BlogPosting">
 
-	<div class="col-md-8 mx-5">
+	<div class="col-md-12">
 
 	  <header class="post-header">
 	    <h1 class="post-title" itemprop="name headline">{{ page.title }}</h1>
+
+		{% if page.excerpt %}
+          <p class="font-italic">{{ page.excerpt | strip_html | strip_newlines }}</p>
+        {% endif %}
+
 	    <p class="post-meta"><time datetime="{{ page.date | date_to_xmlschema }}" itemprop="datePublished">{{ page.date | date: "%b %-d, %Y" }}</time>{% if page.author %} • <span itemprop="author" itemscope itemtype="http://schema.org/Person"><span itemprop="name">{{ page.author }}</span></span>{% endif %}</p>
+
 	  </header>
 
 	  <div class="post-content" itemprop="articleBody">
