--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,7 +7,7 @@
 
     {% include header.html %}
 
-    <div class="page-content container-fluid my-5">
+    <div class="container my-5">
       <div class="wrapper">
         {{ content }}
       </div>
