--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,6 +1,6 @@
 <footer>
   <div class="block block-inverse block-bordered">
-    <div class="container-fluid">
+    <div class="container">
       <div class="row">
         <div class="col-md-3">
           <address>
@@ -20,7 +20,7 @@
             </ul>
           </address>
         </div>
-        <div class="col-md-2">
+        <div class="col-md-3">
           <h4 class="text-uppercase text-muted mb-5">Social</h4>
           <ul class="list-unstyled list-inline list-spaced">
             <li class="list-inline-item">
@@ -41,7 +41,7 @@
             </li>
           </ul>
         </div>
-        <div class="col-md-2">
+        <div class="col-md-3">
           <h4 class="text-uppercase text-muted mb-5">Support</h4>
           <ul class="list-unstyled list-spaced">
             <li>
@@ -52,7 +52,7 @@
             </li>
           </ul>
         </div>
-        <div class='col-md-2'>
+        <div class='col-md-3'>
           <div class='mr-3 mb-3'>
             <img height="120" src="{{ "/images/ERDF_project_logo.png" | prepend: site.baseurl | prepend: site.url }}" />
           </div>
