Shrank in navbar

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,22 +1,24 @@
 <header class="site-header">
   <div class="wrapper">
-    <nav class="navbar navbar-expand-md navbar-light bg-light" id="fc-navbar">
-      <a class="navbar-brand" href="/">
-        <img height="30" src="{{ "/images/fc-logo-navbar.png" | prepend: site.baseurl | prepend: site.url }}">
-      </a>
-      <button class="navbar-toggler" data-target="#navbar-content" data-toggle="collapse" type="button">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbar-content">
-        <ul class="navbar-nav ml-auto mt-2 mt-lg-0">
-          <li class='nav-item mx-3 navbar_pre_sign_in h4'>
-            <a class="nav-link my-3" href="https://beta.faircustodian.com/users/sign_up">Sign up</a>
-          </li>
-          <li class='nav-item mx-3 navbar_pre_sign_in h4'>
-            <a class="nav-link my-3" href="https://beta.faircustodian.com/users/sign_in">Sign in</a>
-          </li>
-        </ul>
-      </div>
-    </nav>
+    <div class="container">
+      <nav class="navbar navbar-expand-md navbar-light" id="fc-navbar">
+        <a class="navbar-brand" href="/">
+          <img height="30" src="{{ "/images/fc-logo-navbar.png" | prepend: site.baseurl | prepend: site.url }}">
+        </a>
+        <button class="navbar-toggler" data-target="#navbar-content" data-toggle="collapse" type="button">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbar-content">
+          <ul class="navbar-nav ml-auto mt-2 mt-lg-0">
+            <li class='nav-item mx-3 navbar_pre_sign_in h4'>
+              <a class="nav-link my-3" href="https://beta.faircustodian.com/users/sign_up">Sign up</a>
+            </li>
+            <li class='nav-item mx-3 navbar_pre_sign_in h4'>
+              <a class="nav-link my-3" href="https://beta.faircustodian.com/users/sign_in">Sign in</a>
+            </li>
+          </ul>
+        </div>
+      </nav>
+    </div>
   </div>
 </header>
