--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -53,11 +53,14 @@
           </ul>
         </div>
         <div class='col-md-3'>
-          <div class='mr-3 mb-3'>
-            <img height="120" src="{{ "/images/ERDF_project_logo.png" | prepend: site.baseurl | prepend: site.url }}" />
+          <div class='mr-3 my-3'>
+            <img height="80" src={{ "/images/org_corporate_sponsor_logo.jpg" | prepend: site.baseurl | prepend: site.url }} />
           </div>
           <div class='mr-3 mb-3'>
-            <img height="120" src="{{ "/images/GX_project_logo.png" | prepend: site.baseurl | prepend: site.url }}" />
+            <img height="60" src="{{ "/images/ERDF_project_logo.jpg" | prepend: site.baseurl | prepend: site.url }}" />
+          </div>
+          <div class='mr-3 mb-3'>
+            <img height="80" src="{{ "/images/GX_project_logo.png" | prepend: site.baseurl | prepend: site.url }}" />
           </div>
         </div>
       </div>
